--- a/addons.css
+++ b/addons.css
@@ -31,17 +31,6 @@
 .notification-wrapper{
     border-radius: 5px;
 }
-.user__notifications {
-    display: flex;
-    height: 51px;
-    width: 51px;
-    background: var(--button-color);
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 12px;
-}
 
 .user__menu:hover {
     border-color: #ff6d6d !important;
@@ -52,7 +41,6 @@
 .user__menu {
     background: linear-gradient(135deg, #1c0f0f, #291414) !important;
 border: 1px solid rgba(255, 109, 109, 0.15) !important;
-    /* background: #221111 !important; */
 }
 
 .user__profile{
@@ -62,7 +50,6 @@ border: 1px solid rgba(255, 109, 109, 0.15) !important;
 .open_user_prof{
     background: #32221a;
     padding: 5px 13px;
-    /* width: 100%; */
     left: 0;
     right: 0;
     top: 65px;
@@ -121,23 +108,11 @@ border-radius: 5px;
 
 @media (min-width: 1080px) {
     .dropbtn {
-        /* display: flex;
-        background: transparent;
-        padding: 5px 10px;
-        border-radius: 12px;
-        gap: 0px;
-        border: none;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        align-items: center;
-        flex-direction: column; */
-        
         display: flex;
         background: transparent;
         padding: 5px 10px;
         border-radius: 12px;
         height: 51px;
-        /* width: 70px; */
         gap: 3px;
         border: none;
         line-height: normal;
@@ -151,18 +126,6 @@ border-radius: 5px;
         .statistics_name{
             display: none;
         }
-    /* .dropbtn {
-        display: flex;
-        background: transparent;
-        padding: 15px 20px;
-        border-radius: 12px;
-        gap: 0px;
-        border: none;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        align-items: center;
-        flex-direction: column;
-    } */
     .desc_nav_item {
         display: block;
     }
@@ -209,6 +172,7 @@ border-radius: 5px;
         overflow: hidden;
         display: block !important;
         border-radius: 12px;
+        padding-top: 50px;
         border: #00000000 solid 1px;
     }
     .drpdwn_menu:hover{
@@ -218,9 +182,7 @@ border-radius: 5px;
         width: 150px;
         height: 351px;
         padding: 50px 5px 5px 5px;
-        /* height: 51px; */
         overflow: hidden;
-        /* padding: 15px 0px; */
         display: block !important;
     }
     .desc_nav_item{
