--- a/addons.css
+++ b/addons.css
@@ -105,7 +105,11 @@ border-radius: 5px;
     margin-top: 10px;
     z-index: 1;
 }
-
+@media (max-width: 768px) {
+    .user__notifications {
+        display: none !important;
+    }
+}
 @media (min-width: 1080px) {
     .dropbtn {
         display: flex;
