--- a/addons.css
+++ b/addons.css
@@ -113,7 +113,7 @@ border-radius: 5px;
     z-index: 1000;
     transition: .5s;
     border-radius: 6px;
-    display: none;
+    display: none !important;
 }
 .chat_open svg{
 	fill: #f4ca80;
